@@ -1,3 +1,10 @@
+2013-05-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCopt.c:
+	  STM8: Disable broken optimization of comparisons into and.
+	* src/stm8/gen.c:
+	  STM8: Slightly more efficient shifts.
+
 2013-05-21 Valentin Dudouyt <valentin dudouyt AT gmail.com>                                                              
 
 	* src/stm8/main.c,
